Wyrd ChangeLog
--------------------------------------------------------------------------------

2005-04-23     Added a configuration variable to switch the first day of the
               week between Sunday and Monday.

2005-04-16     Released 0.1.3.

               A more suitable error message is generated when trying to run
               Wyrd on terminals without color support.

               Wyrd now discards exceptions due to errors on curs_set(), which
               is not supported in all terminals.

               Made installation script portable to BSD install(1).

2005-04-15     Released 0.1.2.

               Upon further investigation, cpp appears to be completely broken 
               on OS X.  Wyrd now ships with pre-preprocessed ML files.

               Released 0.1.1.

               Changed invocations of 'cpp' to 'cpp -P' to correct compilation
               errors on OS X, maybe others.

               Released 0.1.0.



# arch-tag: DO_NOT_CHANGE_0a925fdb-a0fa-4330-a560-dd31770ca22c 